Implement E2E tests and refactor page objects for tasks, statuses, and labels